--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -437,7 +437,7 @@ For experimental sample cohort $c_{e}$ and auxiliary sample cohort $c_{n}$:
 \begin{equation}
 Y_{e,a,c_{e},t_{e}}^d = Y_{n,a,c_{n},t_{n}}^d
 \end{equation}
-for $d \in \{ 0, 1\}$, $a \geq a^*$, where $t_{e}, t_{n}$ are the years for which cohorts $c_{e}, c_{n}$ are observed, where $t_e = t_n + c_e - c_n$, and $t_n$ is the year the age $a$ outcome is observed for cohort $n$ ($t_n = a + c_n$).$\square$
+for $d \in \{ 0, 1\}$, $a \geq a^*$, where $t_{e}, t_{n}$ are the years for which cohorts $c_{e}, c_{n}$ are observed, where $t_e = t_n + c_e - c_n$, and $t_n$ is the year that the age $a$ outcome is observed for cohort $n$ ($t_n = a + c_n$). $\square$
 \end{assumption}
 \doublespacing
 
@@ -602,10 +602,6 @@ The same procedure is applied to calculate quality-adjusted life years (QALYs).\
 
 We estimate three models of medical spending: (i) Medicare spending (annual medical spending paid by parts A, B, and D of Medicare); (ii) out-of-pocket spending (medical spending paid directly by the individual); and (ii) all public spending other than Medicare. Each medical spending model includes the variables we use to predict labor and transfer income, together with current health, risk factors, and functional status as explanatory variables.
 
-We also calculate medical expenditure before age 30. The ABC/CARE interviews at ages 12, 15, 21 and 30 have information related to hospitalizations at different ages and number of births before age 30. We combine this retrospective information and individual and family demographic variables with medical spending models estimates using MEPS to predict medical spending for each age.
-
-QALYs are crucial for our benefit-cost analysis because they monetize the health of an individual at each age. Figure~\ref{fig:qalys} shows our estimation of QALYs together with a PSID comparison, in an exercise analogous to that used to produce Figure~\ref{fig:labor-income-profiles}.\footnote{In our baseline estimation, we assume that each year of life is worth  $\$150,000$ (2014 USD). Our estimates are robust to substantial variation in this assumption, as we show in Appendix~\ref{appendix:sensitivity}.} Although there is not a clear age-by-age treatment effect on QALYs, there is a significant difference in the accumulated present value of the QALYs between the treatment and the control groups. The QALYs for individuals in the control group match the QALYs of disadvantaged individuals in the PSID.\footnote{In Appendix~\ref{appendix:health} we further discuss and justify the parameterizations required to obtain estimates of QALYs. \citet{Goldman_etal_2015_Future-America-Model} examine the sensitivity to these parameterizations and discuss alternative micro-simulations monetizing health condition.}
-
 \begin{figure}[!htbp]
 \caption{Quality Adjusted Life Years, Predictions and Comparison to PSID}\label{fig:qalys}
 \centering
@@ -615,6 +611,9 @@ QALYs are crucial for our benefit-cost analysis because they monetize the health
 Note:  This figure displays the life-cycle net-present value of predicted quality-adjusted life years (QALYs) for ABC/CARE males and females, respectively, by treatment status. The predictions are based on combining data from the Panel Study of Income Dynamics (PSID), the Health Retirement Study, and the Medical Expenditure Panel Survey (MEPS). For each gender, we display a comparison to disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as being Black and having 12 years of education or less. QALYs are the quality-adjusted life years gain due to better health conditions. Standard errors are based on the empirical bootstrap distribution.}
 \end{figure}
 
+We also calculate medical expenditure before age 30. The ABC/CARE interviews at ages 12, 15, 21 and 30 have information related to hospitalizations at different ages and number of births before age 30. We combine this retrospective information and individual and family demographic variables with medical spending models estimates using MEPS to predict medical spending for each age.
+
+QALYs are crucial for our benefit-cost analysis because they monetize the health of an individual at each age. Figure~\ref{fig:qalys} shows our estimation of QALYs together with a PSID comparison, in an exercise analogous to that used to produce Figure~\ref{fig:labor-income-profiles}.\footnote{In our baseline estimation, we assume that each year of life is worth  $\$150,000$ (2014 USD). Our estimates are robust to substantial variation in this assumption, as we show in Appendix~\ref{appendix:sensitivity}.} Although there is not a clear age-by-age treatment effect on QALYs, there is a significant difference in the accumulated present value of the QALYs between the treatment and the control groups. The QALYs for individuals in the control group match the QALYs of disadvantaged individuals in the PSID.\footnote{In Appendix~\ref{appendix:health} we further discuss and justify the parameterizations required to obtain estimates of QALYs. \citet{Goldman_etal_2015_Future-America-Model} examine the sensitivity to these parameterizations and discuss alternative micro-simulations monetizing health condition.}
 
 \subsection{Crime\footnote{The input of Andr\'{e}s Hojman was essential for this component of our analysis.}}\label{sec:crime}
 
@@ -687,11 +686,7 @@ Parental income is an important component of the benefit/cost ratio. We take a c
 
 Alternative approaches considering the gain for the parents through age 65 generate an increase in the gain due to parental income (parental income columns). As noted in Section~\ref{section:cbamethodology}, our estimates ignore any cohort effects. Individuals in ABC/CARE could experience positive cohort effects that might (i) make them more productive and therefore experience wage growth \citep{Lagakos_Moll_etal_2016_LifeCycle_NBER}; (ii) experience a negative shock such as an economic crisis and therefore experience a wage decline \citep{Jarosch_2016_JobSecurity_Econometrica}. Our estimates are robust when we vary annual growth and decay rates between $-.5\%$ to $.5\%$.
 
-We do not conduct sensitivity analysis to investigate alternative plausible cohort effects of health costs. Treated individuals are healthier. They reduce medical costs. But they also live longer, increasing medical costs. These opposing effects tend to negate each other \citep{Goldman_etal_2015_Future-America-Model}. We have little guidance on predicting the future health costs and benefits of our cohort compared to the cohorts on which FAM is based.
-
-We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group committed a rape and one individual in the control group committed a murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we would not want our calculation to be based on a few exceptional crimes. The second is important because victimization costs are somewhat subjective (see Appendix~\ref{appendix:crime}). Our benefit/cost analysis is robust to these adjustments, even when crime is a major component. Lastly, we examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because relatively healthier individuals survive longer and healthier, and treatment improves health conditions. It is important to note that this component largely accumulates later in life and therefore it is heavily discounted. Dropping the component or doubling the value of life does not have a major impact on our calculations.
-
-\begin{table}[!htbp]
+\begin{table}[H]
 \centering
 \caption{Cost/benefit Analysis of ABC/CARE, Summary}\label{table:cba}
 \begin{threeparttable}
@@ -704,6 +699,10 @@ We also examine the sensitivity of our estimates to (i) dropping the most costly
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
+
+We do not conduct sensitivity analysis to investigate alternative plausible cohort effects of health costs. Treated individuals are healthier. They reduce medical costs. But they also live longer, increasing medical costs. These opposing effects tend to negate each other \citep{Goldman_etal_2015_Future-America-Model}. We have little guidance on predicting the future health costs and benefits of our cohort compared to the cohorts on which FAM is based.
+
+We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group committed a rape and one individual in the control group committed a murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we would not want our calculation to be based on a few exceptional crimes. The second is important because victimization costs are somewhat subjective (see Appendix~\ref{appendix:crime}). Our benefit/cost analysis is robust to these adjustments, even when crime is a major component. Lastly, we examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because relatively healthier individuals survive longer and healthier, and treatment improves health conditions. It is important to note that this component largely accumulates later in life and therefore it is heavily discounted. Dropping the component or doubling the value of life does not have a major impact on our calculations.
 
 The estimates are robust when we conduct a drastic sensitivity analysis by removing components of the benefit/cost analysis entirely (Table~\ref{table:cba}).\footnote{In Appendix~\ref{appendix:sensitivity}, we present exercises that are not as drastic as removing the whole component, but instead removing fractions of it.} Even when completely removing the gain associated with crime for males, the program is socially efficient---both the internal rate of return and the benefit/cost ratio are substantial. Parental income and crime are the components for which the internal rate of return and the benefit/cost ratio are the most sensitive. The reason for the sensitivity to parental income is that the amount is substantial and it is not heavily discounted because it accumulates during the first $21$ years of the children's life.\footnote{Depending on views about choice of individuals in labor markets, parental income should be excluded or included. If markets are neoclassical, the marginal value of foregone leisure is the wage and our our measure of parental income overstates the benefits of working. If nonemployment is involuntary, the full benefits should be counted.} Crime occurs later in life and its benefits are discounted accordingly. The amount due to crime savings is large so removing it diminishes both the internal rate of return and the benefit/cost ratio (but they remain statistically significant).
 
