--- a/output/allbc_sens.tex
+++ b/output/allbc_sens.tex
@@ -26,7 +26,7 @@ Income	&	\textbf{5.51}	&	\textbf{5.92}	&	\textbf{10.60}	&	\textbf{12.29}	&	\text
 	&	(2.31)	&	(2.47)	&	(5.47)	&	(5.81)	&	(0.88)	&	1.11	\\ \midrule
 Crime	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	&	\textit{Drop Major Crimes}	&	\textit{Halve Costs}	\\
 	&	\textbf{5.17}	&	\textbf{4.09}	&	\textbf{11.79}	&	\textbf{8.19}	&	\textbf{2.80}	&	\textbf{2.34}	\\
-	&	(2.37)	&	(1.56)	&	(5.43)	&	(3.69)	&	(1.07)	&	0.96	\\
+	&	(2.37)	&	(1.56)	&	(5.43)	&	(3.69)	&	(1.07)	&	0.96	\\ \midrule
 Health	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	&	\textit{Drop All}	&	\textit{Double Value of Life}	\\
 (QALYs)	&	\textbf{4.82}	&	\textbf{6.62}	&	\textbf{10.26}	&	\textbf{12.65}	&	\textbf{2.57}	&	\textbf{2.83}	\\
 	&	(2.32)	&	(2.64)	&	(5.46)	&	(6.13)	&	(0.99)	&	1.27	\\ \bottomrule
