--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -85,9 +85,41 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 \setcounter{page}{0}
 \pagenumbering{arabic}
 
+\begin{center}
+Note for file on CBA\\
+11/9/16\\
+(For private discussion with Jorge)
+\end{center}
+We have two distinct approaches.
+\begin{enumerate}[(1)]
+\item Structural approach
+    \begin{enumerate}[(A)]
+    \item Find people ``in the ballpark''
+    \item Write out model/assumption
+    \item Structural invariance role
+    \item Don't need exogeneity -- we can correct for it
+    \item How we use it to make out-of-sample comparisons for treatment and controls
+    \item How to deal with future values of $\bm{X}^d_{k,a}$ $a>a^{\ast}$. How to predict those? How exactly do we do this?
+    \item Also how do we forecast future $\bm{X}^d_{k,a}$ if it lags? And how to correct the standard errors?
+    \end{enumerate}
+\item Matching
+    \begin{enumerate}[(A)]
+    \item Same step as 1
+    \item Assume exogeneity and find counterparts; we don't need exogeneity in levels -- just in differences. $(Y^1 - Y^0 = \bm{\mu}^1 - \bm{\mu}^0 + \varepsilon^1_0 - \varepsilon^0)$, need $E(\varepsilon^1 - \varepsilon^0 | \bm{X}) = 0$
+    \item Do we need structural invariance? (Not necessarily.) We can assume that there is a break in the \textbf{[Typist: Sentence ends]}. But need invariance as to levels
+    \item These are counterparts to future $\bm{X}$ question -- how to match?
+    \end{enumerate}
+\end{enumerate}
+
+\noindent Issues
+\begin{enumerate}[(a)]
+\item Exogeneity? Only in differences
+\item How to deal with future $\bm{X}^d_a$ not predicted by current information set
+\end{enumerate}
+
 \section{Introduction}
 
-This paper documents the large array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children. The program has substantial impacts on the lives of participants. Monetizing benefits and costs across multiple domains, we estimate a rate of return of 12.3\% per annum and a benefit/cost ratio of 5.7. There are substantial differences across genders favoring males.
+This paper estimates the large array of life-cycle benefits of an influential early childhood program targeted to disadvantaged children. The program has substantial impacts on the lives of participants. Monetizing benefits and costs across multiple domains, we estimate a rate of return of 12.3\% per annum and a benefit/cost ratio of 5.7. There are substantial differences across genders favoring males.
 
 Our analysis contributes to a growing literature on the value of early programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term evidence on their effectiveness is surprisingly limited.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_RateofReturn,Heckman_Moon_etal_2010_QE}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report only a few early age outcomes like IQ or scores on school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2016_QJE} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} Yet it is the long-term returns that are relevant for policy analysis.
 
@@ -332,12 +364,11 @@ Note: Panel (a) percentage of outcomes displaying a positive treatment effect, c
 
 The major goal of this paper is to summarize the multiple benefits of ABC/CARE using benefit/cost and rate of return analyses. We rely on auxiliary data to predict the costs and benefits of the program over the life cycle after the measurement phase of the study ends.
 
-We construct synthetic treatment and control cohorts.\footnote{See, e.g., \citet{Mincer_1974_schooling} and the survey in \citet{Heckman_Lochner_ea_2006_HEE}.} The problem in doing so comes in creating counterparts to the treatment and control groups in auxiliary samples. Outcomes of ``comparable'' older cohorts in auxiliary samples who are not exposed to the program are used to construct virtual treatment and control groups. We address the problem of finding who among the auxiliary samples would have received treatment if the program had been available to them.
+We use two approaches to construct synthetic treatment and control cohorts.\footnote{See, e.g., \citet{Mincer_1974_schooling} and the survey in \citet{Heckman_Lochner_ea_2006_HEE}.} One approach uses matching methods to create counterparts for treatment and control group members in the auxiliary samples. The validity of this approach rests critically on the assumption of exogeneity of the matching variables. A second approach relies on structural invariance of the underlying economic model. It can be applied even if exogeneity fails, provided that there is access to instruments. Outcomes of ``comparable'' older cohorts in auxiliary samples who are not exposed to the program are used to construct virtual treatment and control groups effectively in both approaches. We thus use two different methods to address the problem of finding who among the auxiliary samples would have received treatment if the program had been available to them. Under exogeneity, the two approaches agree.
 
 In addition, older cohorts may have received different endowments and experienced different environments. An assumption of stationary life-cycle profiles across cohorts may be grossly at odds with the data.
 
-This section explains our strategy for constructing out-of-sample treatment effects. Our approach starts from and extends the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show, in a setting similar to ours, that the effect of treatment on outcomes operates through its effects on inputs in a stable production function rather than through shifts in the production function.
-Table~\ref{table:sources} presents the outcomes for which we conduct these analyses and the data sources used. We initially focus on labor income to illustrate our approach, but a similar methodology is used to predict the other outcomes.
+This section explains our strategy for constructing out-of-sample treatment effects. Our more structural approach starts from and extends the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show, in a setting similar to ours, that the effect of treatment on outcomes operates through its effects on inputs in a stable production function rather than through shifts in the production function. Table~\ref{table:sources} presents the outcomes for which we conduct these analyses and the data sources used. We initially focus on labor income to illustrate our approach, but a similar methodology is used to predict the other outcomes.
 
 \begin{table}[!htbp]
 \begin{threeparttable}
@@ -364,9 +395,11 @@ Nonetheless, in this paper we focus on making valid predictions of separate trea
 
 Comparisons between the experimental control group and the synthetic control group are particularly compelling. By design, neither group receives treatment. In our data, all persons offered treatment accept it, so it is straightforward to construct synthetic control groups in auxiliary samples using only eligibility criteria.
 
-There are two distinct stages in our analysis. In Stage I, we construct samples of comparison group members with the same or similar characteristics as the experimental group members. In Stage II, we build models in these samples to forecast out-of-sample treatment effects. Specifically, we adopt a three-step procedure. In Step 1, we use the experimental sample to conduct dynamic mediation analyses relating the vector of outcomes at age $a$ for person $i$ ($\bm{Y}^{d}_{i,a}$) for $a\leq a^*$ to predictor variables (and interactions) that are affected by treatment ($\bm{X}^{d}_{i,a}$), as well as background variables ($\bm{B}_i$). It turns out that we accurately predict within-sample treatment effects as well as levels of treatment and control profiles using this approach. In Step 2, we construct counterparts to treatment- and control-group members in the auxiliary samples. We compare these constructed counterparts to the actual samples for ages $a \leq a^\ast$. In Step 3, we use the estimated dynamic relationships fit on the constructed samples to predict the post-$a^{\ast}$ outcomes. To avoid notational clutter, we suppress individual $i$ subscripts.
+There are two distinct stages in our structural analysis. In Stage I, we construct samples of comparison group members with the same or similar characteristics as the experimental group members. The minimal set of characteristics includes the background variables $\bm{B} \in \mathcal{B}$. In Stage II, we build models in these samples to forecast out-of-sample treatment effects. 
 
-We preview the outputs from this approach. Figure~\ref{fig:labor-income-profiles} displays the life-cycle labor income profiles predicted by our procedure for the treatment and control groups. It also compares the realized labor income to the model-predicted labor income at $a^*$. There is close agreement of the constructed profiles within sample. The pattern of life-cycle labor income we generate is typical for low-skilled workers \citep{Blundell-etal_2015_J-Pub-E,Gladden_Taber_2000_WageProgression,Sanders-Taber_2012_AR,Lagakos_Moll_etal_2016_LifeCycle_NBER}.\footnote{The prediction of labor (transfer) income is based on indicator variables of being male and being Black, mother's education, average PIAT scores from ages 5 to 7, years of education at age 30, income at age 21 and 30, and one-period lagged labor (transfer) income. We use labor income at age 21 to initialize this process. A justification for the use of these variables is in Appendix~\ref{appendix:methodology}.}
+Specifically, we adopt a three-step procedure. In Step 1, we use the experimental sample to conduct dynamic mediation analyses relating the vector of outcomes at age $a$ for person $i$ ($\bm{Y}^{d}_{i,a}$) for $a\leq a^*$ to predictor variables (and interactions) that are affected by treatment ($\bm{X}^{d}_{i,a}$), as well as background variables ($\bm{B}_i$). To avoid notational clutter, we henceforth suppress individual $i$ subscripts. It turns out that we accurately predict within-sample treatment effects as well as levels of treatment and control profiles using this approach. In Step 2, we construct counterparts to treatment- and control-group members in the auxiliary samples. We compare these constructed counterparts to the actual samples for ages $a \leq a^\ast$. In Step 3, we use the estimated dynamic relationships fit on the constructed samples to predict the post-$a^{\ast}$ outcomes. Under exogeneity of the predictor variables, the two stages can be compressed into a single, one-stage matching procedure.
+
+We preview the outputs from the structural approach. Figure~\ref{fig:labor-income-profiles} displays the life-cycle labor income profiles predicted by our procedure for the treatment and control groups. It also compares the realized labor income to the model-predicted labor income at $a^*$. There is close agreement of the constructed profiles within sample. The pattern of life-cycle labor income we generate is typical for low-skilled workers \citep{Blundell-etal_2015_J-Pub-E,Gladden_Taber_2000_WageProgression,Sanders-Taber_2012_AR,Lagakos_Moll_etal_2016_LifeCycle_NBER}.\footnote{The prediction of labor (transfer) income is based on indicator variables of being male and being Black, mother's education, average PIAT scores from ages 5 to 7, years of education at age 30, income at age 21 and 30, and one-period lagged labor (transfer) income. We use labor income at age 21 to initialize this process. A justification for the use of these variables is in Appendix~\ref{appendix:methodology}.}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -406,7 +439,7 @@ Note: Panel (a) displays the predicted labor income for males in the auxiliary s
 
 \subsection{Constructing Out-of-Sample Counterfactuals}\label{section:just}
 
-We now present our analytical framework and its underlying assumptions for the Stage II forecasting analysis. Our analysis is based on a causal model for treatment ($d=1$) and control ($d=0$) outcomes for measure $j$ at age $a$ in sample $k \in \{e,n\}$ where $e$ denotes membership in the experimental sample and $n$ denotes membership in the control sample:
+We now present our analytical framework and its underlying assumptions for the structural Stage II forecasting analysis. Our analysis is based on a causal model for treatment ($d=1$) and control ($d=0$) outcomes for measure $j$ at age $a$ in sample $k \in \{e,n\}$ where $e$ denotes membership in the experimental sample and $n$ denotes membership in the auxiliary sample:
 \begin{equation}\label{eq:outcome}
 Y^d_{k,j,a} = \phi^d_{k,j,a} (\bm{X}^d_{k,a}, \bm{B}_k) + \varepsilon^d_{k,j,a}, \quad j \in \mathcal{J}_a.
 \end{equation}
@@ -556,15 +589,15 @@ Under Assumptions~\ref{ass:alignment}-\ref{ass:summary}, Condition~\ref{cond:con
 
 \subsubsection{Testing for Endogeneity}\label{section:accendog}
 
-In Appendix~\ref{app:endogeneity}, we investigate the question of endogeneity in the experimental and auxiliary samples. We follow \citet{Heckman_Pinto_etal_2013_PerryFactor} and assume that the $\varepsilon_{k,j,a}^d$ obey a factor structure, $k \in \{e,n\}$. We develop that framework and provide evidence supporting exogeneity in both samples for the variables used in our empirical analysis.
+In Appendix~\ref{app:endogeneity}, we investigate the question of endogeneity in the experimental and auxiliary samples. We follow \citet{Heckman_Pinto_etal_2013_PerryFactor} and assume that the $\varepsilon_{k,j,a}^d$ obey a factor structure, $k \in \{e,n\}$. We develop that framework and provide evidence supporting exogeneity in both samples for the predictor variables used in our empirical analyses.
 
 \subsubsection{Using Matching to Construct Virtual Treatment and Comparison Groups}\label{usingmatching}
 
 Under exogeneity assumption~\ref{ass:exog} and invariance condition~\ref{ass:summary} we can use matching to construct counterparts to treatment and control groups in the auxiliary sample.\footnote{\citet{Heckman_Ichimura_etal_1998_Econometrica} use this procedure.} Doing so compresses the two stages of constructing a comparison group and creating forecasts into one stage. We discuss this approach in Appendix~\ref{appendix:match}. Matching is one way to non-parametrically estimate the conditional mean functions. There is close agreement between non-parametric estimates based on matching and more parametric model-based approaches (see Appendix~\ref{appendix:nonpar}).
 
-\subsubsection{Summarizing Our Approach and What We Do in Practice}
+\subsubsection{Summarizing Our Approach and What We Do in This Paper}
 
-Using the data sources listed in Table~\ref{table:sources}, we execute our analysis in two stages. In Stage I, we construct comparison samples of group members using different criteria: (a) barebones eligibility criteria ($\bm{B}_n \in \mathcal{B}$); (b) using $\bm{X}^d_k$ (variables affected by treatment); (c) using both (a) and (b). In constructing comparison groups using $\bm{X}^d_k$, we are limited to variables common to both experimental and comparison group samples. In Stage II, we use the samples so constructed to create post-$a^\ast$ forecasting models. The non-parametric estimates described in Section~\ref{usingmatching} combine the two stages. In Appendix~\ref{appendix:match}, we report sensitivity analyses based on different choices of $\bm{B}$ and $\bm{X}^d$. We find that, in our samples, our estimates are robust to alternative choices of matching criteria in constructing comparison samples in Stage I.
+Using the data sources listed in Table~\ref{table:sources}, we execute our analysis in two stages. In Stage I, we construct comparison samples of group members using different criteria: (a) barebones eligibility criteria ($\bm{B}_n \in \mathcal{B}$); (b) using $\bm{X}^d_k$ (variables affected by treatment); (c) using both (a) and (b). In constructing comparison groups using $\bm{X}^d_k$, we are limited to variables common to both experimental and comparison group samples. In Stage II, we use the samples so constructed to create post-$a^\ast$ forecasting models. The non-parametric approach described in Section~\ref{usingmatching} combines the two stages. The estimates reported in the text of this paper are based on the structural approach outlined here. We report estimates from the non-parametric approach for selected outcomes in Appendix~\ref{appendix:nonpar}. In Appendix~\ref{appendix:match}, we report sensitivity analyses for our structural estimates based on different choices of $\bm{B}$ and $\bm{X}^d_k$. We find that, in our samples, our estimates are robust to alternative choices of matching criteria in constructing comparison samples in Stage I.
 
 \subsection{Predicting Parental Income} \label{section:pincome}
 
@@ -600,8 +633,6 @@ At each age, once we obtain the transition probability for each health outcome, 
 
 The same procedure is applied to calculate quality-adjusted life years (QALYs).\footnote{A quality-adjusted life year (QALY) reweighs a year of life according to its quality given the burden of disease. Suppose we assign a value of $\$150,000$ (2014 USD) to each year of life. A QALY of $\$150,000$ denotes a year of life in the absence of disease (perfect health). The value of QALY for an individual in a given year is smaller than $\$150,000$ when there is positive burden of disease, as worse health conditions imply lower QALYs. When an individual dies, her QALY equals zero. There are extreme combinations of disease and disability that may generate negative QALYs, although this is unusual.} We compute a QALY model based on a widely-used health-related Quality-of-life (HRQoL) measure (EQ-5D), available in MEPS.\footnote{For a definition and explanation of this instrument, see \citet{Dolan_1997_Modeling_MC,Shaw_etal_2005_EQ5D_MC}.} We then estimate this model using the PSID.
 
-We estimate three models of medical spending: (i) Medicare spending (annual medical spending paid by parts A, B, and D of Medicare); (ii) out-of-pocket spending (medical spending paid directly by the individual); and (ii) all public spending other than Medicare. Each medical spending model includes the variables we use to predict labor and transfer income, together with current health, risk factors, and functional status as explanatory variables.
-
 \begin{figure}[!htbp]
 \caption{Quality Adjusted Life Years, Predictions and Comparison to PSID}\label{fig:qalys}
 \centering
@@ -610,6 +641,8 @@ We estimate three models of medical spending: (i) Medicare spending (annual medi
 \footnotesize
 Note:  This figure displays the life-cycle net-present value of predicted quality-adjusted life years (QALYs) for ABC/CARE males and females, respectively, by treatment status. The predictions are based on combining data from the Panel Study of Income Dynamics (PSID), the Health Retirement Study, and the Medical Expenditure Panel Survey (MEPS). For each gender, we display a comparison to disadvantaged males and females in the Panel Study of Income Dynamics (PSID), where disadvantaged is defined as being Black and having 12 years of education or less. QALYs are the quality-adjusted life years gain due to better health conditions. Standard errors are based on the empirical bootstrap distribution.}
 \end{figure}
+
+We estimate three models of medical spending: (i) Medicare spending (annual medical spending paid by parts A, B, and D of Medicare); (ii) out-of-pocket spending (medical spending paid directly by the individual); and (ii) all public spending other than Medicare. Each medical spending model includes the variables we use to predict labor and transfer income, together with current health, risk factors, and functional status as explanatory variables.
 
 We also calculate medical expenditure before age 30. The ABC/CARE interviews at ages 12, 15, 21 and 30 have information related to hospitalizations at different ages and number of births before age 30. We combine this retrospective information and individual and family demographic variables with medical spending models estimates using MEPS to predict medical spending for each age.
 
